--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -72,7 +72,7 @@
                         <td>Closest to the Sun</td>
                         <td>
                         <figure>
-                            <img class="mercury" src="planets-table/images/mercury.jpg" style="style:100%">
+                            <img class="mercury" src="planets-table/images/mercury.jpg" style="width:100%">
                         </figure>
                         </td>
                     <tr>
@@ -88,138 +88,31 @@
                         <td></td>
                     </tr>
                     <tr>
-                        <td><strong>Mercury</strong></td> 
-                        <td>0.330</td>
-                        <td>4.879</td>
-                        <td>5427</td>
-                        <td>3.7</td>
-                        <td>4222.6</td>
-                        <td>57.9</td>
-                        <td>167</td>
-                        <td>0</td>
-                        <td>Closest to the Sun</td>
+                        <td><strong>Earth</strong></td> 
+                        <td>5.97</td>
+                        <td>12,756</td>
+                        <td>5514</td>
+                        <td>9.8</td>
+                        <td>24.0</td>
+                        <td>149.6</td>
+                        <td>15</td>
+                        <td>1</td>
+                        <td>Our world</td>
                     </tr>
                     <tr>
-                        <td><strong>Mercury</strong></td> 
-                        <td>0.330</td>
-                        <td>4.879</td>
-                        <td>5427</td>
+                        <td><strong>Mars</strong></td> 
+                        <td>0.642</td>
+                        <td>6,792</td>
+                        <td>3933</td>
                         <td>3.7</td>
-                        <td>4222.6</td>
-                        <td>57.9</td>
-                        <td>167</td>
-                        <td>0</td>
-                        <td>Closest to the Sun</td>
+                        <td>24.7</td>
+                        <td>227.9</td>
+                        <td>-65</td>
+                        <td>2</td>
+                        <td>The red planet</td>
                         <td>
                     </tr>
-                    <tr>
-                        <td><strong>Mercury</strong></td> 
-                        <td>0.330</td>
-                        <td>4.879</td>
-                        <td>5427</td>
-                        <td>3.7</td>
-                        <td>4222.6</td>
-                        <td>57.9</td>
-                        <td>167</td>
-                        <td>0</td>
-                        <td>Closest to the Sun</td>
-                        <td>
-                    </tr>
-                    <tr>
-                        <td><strong>Mercury</strong></td> 
-                        <td>0.330</td>
-                        <td>4.879</td>
-                        <td>5427</td>
-                        <td>3.7</td>
-                        <td>4222.6</td>
-                        <td>57.9</td>
-                        <td>167</td>
-                        <td>0</td>
-                        <td>Closest to the Sun</td>
-                        <td>
-                    </tr>
-                    <tr>
-                        <td><strong>Mercury</strong></td> 
-                        <td>0.330</td>
-                        <td>4.879</td>
-                        <td>5427</td>
-                        <td>3.7</td>
-                        <td>4222.6</td>
-                        <td>57.9</td>
-                        <td>167</td>
-                        <td>0</td>
-                        <td>Closest to the Sun</td>
-                        <td>
-                    </tr>
-                    <tr>
-                        <td><strong>Mercury</strong></td> 
-                        <td>0.330</td>
-                        <td>4.879</td>
-                        <td>5427</td>
-                        <td>3.7</td>
-                        <td>4222.6</td>
-                        <td>57.9</td>
-                        <td>167</td>
-                        <td>0</td>
-                        <td>Closest to the Sun</td>
-                        <td>
-                    </tr>
-                     <!--
-                    <tr>
-                        <th>Blank</th>
-                         <th><strong>Name</strong></th>
-                         <th><strong>Name</strong></th>
-                         <th><strong>Name</strong></th>
-                         <th><strong>Name</strong></th>
-                         <th><strong>Name</strong></th>
-                         <th><strong>Name</strong></th>
-                    </tr>
-                     <tr>
-                        <th>TEST4</th>
-                         <th>TEST5</th>
-                         <th>TEST6</th>
-                    </tr>
-                     <tr>
-                        <td>TEST10</td>
-                         <td>TEST11</td>
-                         <td>TEST12</td>
-                         <td>TEST13</td>
-                         <td>TEST14</td>
-                        
-                    </tr>
-                     <tr>
-                         <th>TEST15</th>
-                         <th>TEST16</th>
-                         <th>TEST617</th>
-                    </tr>
-                     <tr>
-                        <th>TEST18</th>
-                         <th>TEST19</th>
-                         <th>TEST20</th>
-                    </tr>
-                     <tr>
-                         <th>TEST21</th>
-                         <th>TEST22</th>
-                         <th>TEST23</th>
-                    </tr>
-                        <th>TEST4</th>
-                         <th>TEST5</th>
-                         <th>TEST6</th>
-                     <tr>
-                         <th>TEST4</th>
-                         <th>TEST5</th>
-                         <th>TEST6</th>
-                    </tr>
-                        <th>TEST4</th>
-                         <th>TEST5</th>
-                         <th>TEST6</th>
-                     <tr>
-                         <th>TEST4</th>
-                         <th>TEST5</th>
-                         <th>TEST6</th>
-                    </tr>
-
--->
+            
                 </tbody>
             </table>
         </main>
