--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -161,8 +161,41 @@
                             <img class="fig-6" src="planets-table/images/saturn.jpg" style="width:100%">
                         </figure>
                         </td>
+                   </tr>
+                    <tr>
+                        <td rowspan="2"><strong>Ice giants</strong></td>
+                    <td><strong>Uranus</strong></td> 
+                        <td>86.8</td>
+                        <td>51,118</td>
+                        <td>1271</td>
+                        <td>8.7</td>
+                        <td>17.2</td>
+                        <td>2872.5</td>
+                        <td>-195</td>
+                        <td>27</td>
+                        <td></td>
+                        <td>
+                        <figure>
+                            <img class="fig-7" src="planets-table/images/uranus.jpg" style="width:100%">
+                        </figure>
+                        </td>
+                         <tr>
+                        <td><strong>Neptune</strong></td> 
+                        <td>102</td>
+                        <td>49,528</td>
+                        <td>1638</td>
+                        <td>11.0</td>
+                        <td>16.1</td>
+                        <td>4495.1</td>
+                        <td>-200</td>
+                        <td>14</td>
+                        <td></td>
+                        <td>
+                        <figure>
+                            <img class="fig-8" src="planets-table/images/neptune.jpg" style="width:100%">
+                        </figure>
+                        </td>
                     </tr>
-                        
                 </tbody>
             </table>
         </main>
