--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -86,7 +86,7 @@
                         <td>108.2</td>
                         <td>464</td>
                         <td>0</td>
-                        <td></td>
+                        <td>&nbsp;</td>
                         <td>
                         <figure>
                             <img class="fig-2" src="planets-table/images/Venus.jpg" alt="subtitle" style="width:100%">
@@ -156,7 +156,7 @@
                         <td>1433.5</td>
                         <td>-140</td>
                         <td>62</td>
-                        <td></td>
+                        <td>&nbsp;</td>
                         <td>
                         <figure>
                             <img class="fig-6" src="planets-table/images/saturn.jpg" style="width:100%">
@@ -174,7 +174,7 @@
                         <td>2872.5</td>
                         <td>-195</td>
                         <td>27</td>
-                        <td></td>
+                        <td>&nbsp;</td>
                         <td>
                         <figure>
                             <img class="fig-7" src="planets-table/images/uranus.jpg" style="width:100%">
@@ -191,7 +191,7 @@
                         <td>4495.1</td>
                         <td>-200</td>
                         <td>14</td>
-                        <td></td>
+                        <td>&nbsp;</td>
                         <td>
                         <figure>
                             <img class="fig-8" src="planets-table/images/neptune.jpg" style="width:100%">
