--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -59,7 +59,7 @@
                 <!-- The fourth child of the table element should be the table body element, which will contain the code and content to display rows of data. -->
                 <tbody>
                     <tr>
-                        <td rowspan="4" colspan="2"><strong>Terrestial planets</strong></td>
+                        <td rowspan="4" colspan="2" scope="rowgroup"><strong>Terrestial planets</strong></td>
                         <td><strong>Mercury</strong></td> 
                         <td>0.330</td>
                         <td>4.879</td>
