--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -128,8 +128,8 @@
                         </td>
                     </tr>
                     <tr>
-                        <td rowspan="4"><strong>Jovian Planets</strong></td>
-                        <td rowspan="2"><strong>Gas giants</strong>
+                        <td rowspan="4" scope="rowgroup"><strong>Jovian Planets</strong></td>
+                        <td rowspan="2" scope="rowgroup"><strong>Gas giants</strong>
                         <td><strong>Jupiter</strong></td> 
                         <td>1898</td>
                         <td>142,984</td>
@@ -164,7 +164,7 @@
                         </td>
                    </tr>
                     <tr>
-                        <td rowspan="2"><strong>Ice giants</strong></td>
+                        <td rowspan="2" scope="rowgroup"><strong>Ice giants</strong></td>
                     <td><strong>Uranus</strong></td> 
                         <td>86.8</td>
                         <td>51,118</td>
@@ -199,7 +199,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td colspan="2"><strong>Dwarf planets</strong></td>
+                        <td colspan="2" scope="rowgroup"><strong>Dwarf planets</strong></td>
                         <td><strong>Pluto</strong></td> 
                         <td>0.0146</td>
                         <td>2,370</td>
