--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -72,7 +72,7 @@
                         <td>Closest to the Sun</td>
                         <td>
                         <figure>
-                            <img class="fig-1" src="planets-table/images/mercury.jpg" style="width:100%">
+                            <img class="fig-1" src="images/mercury.jpg" style="width:100%">
                         </figure>
                         </td>
                     </tr>
