--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -89,7 +89,7 @@
                         <td>&nbsp;</td>
                         <td>
                         <figure>
-                            <img class="fig-2" src="images/Venus.jpg" style="width:100%">
+                            <img class="fig-2" src="images/venus.jpg" style="width:100%">
                         </figure>
                         </td>
                     </tr>
@@ -106,7 +106,7 @@
                         <td>Our world</td>
                         <td>
                         <figure>
-                            <img class="fig-3" src="images/Earth.jpg" style="width:100%">
+                            <img class="fig-3" src="images/earth.png" style="width:100%">
                         </figure>
                         </td>
                     </tr>
