--- a/index.html
+++ b/index.html
@@ -1,6 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+    @font-face {
+font-family:Josefinslab;
+src: url(../fonts/josefinslab-regular.tff) format('truetype');
+font-style:normal;
+font-weight:normal;
+}
+@font-face {
+font-family:Monsterrat;
+src: url(../fonts/monsterrat-regular.tff) format('truetype');
+font-style:normal;
+font-weight:normal;
+
+Next, I am not sure what I am missing in the code that is not allowing the font to appear. Here is my other code:
+
+html {
+font-family: 'Monsterrat', sans-serif;
+
+}
+h1 {
+letter-spacing: .125rem;
+font-family: 'Josefinslab', serif;
+font-weight:normal;
+font-style:normal;
+font-size: 3.75rem;
+margin: 1.125rem;
+text-align: center;
+}
+
+h2 {
+letter-spacing: .125rem;
+font-family: 'Josefinslab', serif;
+font-weight:normal;
+font-style:normal;
+font-size: 1.5rem;
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
