--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         
         <!-- Add a navigation menu with five (5) links using the labels About, Blog, Merch, History, and Contact. Use the "#" symbol for your href values. -->
         <nav>
-            <img  src= "images/stag.jpg"
+            <img  border="0" src="images/stag.jpg" align="left"
                 alt= "Andouille tail chislic">
         
         </nav>
