--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <!-- Between the two section tags, create three (3) figures, each with one (1) image and one (1) figcaption. -->
                     
                 <figure>
-                    <img src= "images\industrial.jpg">
+                    <img src= "images\industrial.jpg" height = "120px" width = "100px">
                     <figcaption>
                     <a href="https://www.flickr.com/photos/christopherf/12476805405/sizes/h/">"J-Dawg"</a> by 
                     <a href="https://www.flickr.com/photos/christopherf/">Christopher</a>
