--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
                     <img src= "images\industrial.jpg" height = "120px" width = "100px">
                     <img src= "images\routine.jpg" height = "120px" width = "100px">
                     <img src= "images\in-nomino.jpg" height = "120px" width = "100px">
+                    <img src= "images\industrial-city.jpg" height = "120px" width = "100px">
+                    <img src= "images\industrial-city-2.jpg" height = "120px" width = "100px">
+                    <img src= "images\eren-30s.jpg" height = "120px" width = "100px">
                     
                     <figcaption>
                     <a href="https://www.flickr.com/photos/christopherf/12476805405/sizes/h/">"J-Dawg"</a> by 
