--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
                         <!-- Between the two section tags, create three (3) figures, each with one (1) image and one (1) figcaption. -->
                     
                 <figure>
-                    <img src= "images\industrial.jpg" height = "125px" width = "103px">
-                    <img src= "images\routine.jpg" height = "125px" width = "103px">
+                    <img src= "images\industrial.jpg" height = "125px" width = "103px" hspace= "5px">
+                    <img src= "images\routine.jpg" height = "125px" width = "103px" hspace= "5px">
                     <img src= "images\in-nomino.jpg" height = "125px" width = "103px">
                     <img src= "images\industrial-city.jpg" height = "125px" width = "103px">
                     <img src= "images\industrial-city-2.jpg" height = "125px" width = "103px">
