--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         
                         <!-- Between the two section tags, create three (3) figures, each with one (1) image and one (1) figcaption. -->
                     
-                <figure>
+                <figure align= "left">
                     <img src= "images\industrial.jpg" height = "120px" width = "100px" hspace= "2px">
                     <img src= "images\routine.jpg" height = "120px" width = "100px" hspace= "2px">
                     <img src= "images\in-nomino.jpg" height = "120px" width = "100px" hspace= "2px">
