--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
                         
                         <!-- Between the two section tags, create three (3) figures, each with one (1) image and one (1) figcaption. -->
                     
-                <figure align= "left">
-                    <img src= "images\industrial.jpg" height = "120px" width = "100px" hspace= "2px">
+                <figure>
+                    <img src= "images\industrial.jpg" height = "120px" width = "100px" hspace= "2px" align= "left">
                     <img src= "images\routine.jpg" height = "120px" width = "100px" hspace= "2px">
                     <img src= "images\in-nomino.jpg" height = "120px" width = "100px" hspace= "2px">
                     <img src= "images\industrial-city.jpg" height = "120px" width = "100px" hspace= "2px">
