--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="navbar">
             
         <a href ="#"> About</a>
-            <a href ="#"> <striker>Blog</striker></a>
+            <a href ="#"> <strike>Blog</strike></a>
         <a href ="#"> Merch</a>
         <a href ="#"> History</a>
         <a href ="#"> Contact</a>
