--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <p class="copyright">&copy; 2020 Sustainable Crucifix Swag</p>
             
             <!-- Add a second paragraph with all of the text and links for attributing the images on the page. Make sure to use the "ideal" attribution from Creative Commons. -->
-            <p class="return">"Stag", "Industrial","Routine"</p>
+            <p class="return">"Stag", "Industrial","Routine", Eren 30's, "In Nomino", Industrial City", <strong>and</strong> "Industrial City II" <strong>by</strong> Sasha Aim <strong>licensed under</strong> CC BY-NC-SA 2.0</p>
             
         </footer>
         </div>
