--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 </article>
                 <aside style= "font-size: normal; font-style: normal; float: right; width: 200px">
                     
-                   <div class='column'>
+                   <div class='column-2'>
                     <!-- Add a level 3 heading, followed by an image and a paragraph. --> 
                      <h3>Bresaola pork chop.</h3>
                     
